Updated to kotlin 1.6.0 in AndroidOnChromeOSDragAndDropDemo

--- a/AndroidOnChromeOSDragAndDropDemo/app/src/main/res/values/strings.xml
+++ b/AndroidOnChromeOSDragAndDropDemo/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
   -->
 <resources>
     <string name="app_name">DragAndDropDemo</string>
+    <string name="drag_me">Drag Me!</string>
+    <string name="drop_things_here">Drop Things Here!</string>
 </resources>
